@@ -1,9 +1,10 @@
 <h3>About</h3>
 <p>
   Flask-Restless is a Flask extension which provides simple generation of
-  ReSTful JSON APIs for database models defined using Flask-SQLAlchemy.  You
-  are currently looking at the documentation of the development version.
-  Things are not stable yet, but if you have some feedback,
+  ReSTful JSON APIs for database models defined using SQLAlchemy (or
+  Flask-SQLAlchemy). You are currently looking at the documentation of the
+  development version. Things are not stable yet, but if you have some
+  feedback,
   <a href="mailto:jeffrey.finkelstein@gmail.com">let me know</a>.
 </p>
 <!--
@@ -25,7 +26,7 @@
 <ul>
   <li><a href="http://pypi.python.org/pypi/Flask-Restless">Flask-Restless @ PyPI</a></li>
   <li><a href="http://github.com/jfinkels/flask-restless">Flask-Restless @ github</a></li>
-  <li><a href="http://github.com/jeffrey/flask-restless/issues">Issue Tracker</a></li>
+  <li><a href="http://github.com/jfinkels/flask-restless/issues">Issue Tracker</a></li>
 </ul>
 
 <!--<a href="http://github.com/jfinkels/flask-restless"><img style="position: fixed; top: 0; right: 0; border: 0;"
