@@ -61,7 +61,7 @@ app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///%s' % DATABASE
 
 # Step 2: initialize extensions.
 db = SQLAlchemy(app)
-api_manager = APIManager(app, db)
+api_manager = APIManager(app, flask_sqlalchemy_db=db)
 login_manager = LoginManager()
 login_manager.setup_app(app)
 
