@@ -34,7 +34,7 @@ class Computer(db.Model):
 db.create_all()
 
 # Create the Flask-Restless API manager.
-manager = flask.ext.restless.APIManager(app, db)
+manager = flask.ext.restless.APIManager(app, flask_sqlalchemy_db=db)
 
 # Create API endpoints, which will be available at /api/<tablename> by
 # default. Allowed HTTP methods can be specified as well.
